[gd_scene load_steps=37 format=3 uid="uid://bf4avrcsc246r"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_xf2iw"]
[ext_resource type="Script" path="res://Scripts/InvShopManager.gd" id="2_hwnbc"]
[ext_resource type="Script" path="res://Scripts/Inventory.gd" id="3_8bbtk"]
[ext_resource type="PackedScene" uid="uid://b3ly0rcj585yi" path="res://Scenes/slot.tscn" id="4_fcjqc"]
[ext_resource type="Script" path="res://Scripts/Shop.gd" id="5_8cb6t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fogs"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10

[sub_resource type="SystemFont" id="SystemFont_8nc6l"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_w4pir"]
font = SubResource("SystemFont_8nc6l")
font_size = 40

[sub_resource type="SystemFont" id="SystemFont_1inre"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_83rat"]
font = SubResource("SystemFont_1inre")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_nrksc"]
font_size = 70

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4wyt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_sjsjx"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_bjmhu"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_ywaq5"]
font = SubResource("SystemFont_bjmhu")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k432"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkcc8"]
bg_color = Color(0.258824, 0.658824, 0.290196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3er5p"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltu0o"]
bg_color = Color(0.301961, 0.537255, 1, 1)

[sub_resource type="SystemFont" id="SystemFont_aohx5"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_bcvbw"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_6food"]
font = SubResource("SystemFont_bcvbw")
font_size = 25

[sub_resource type="SystemFont" id="SystemFont_fo6tg"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_8g67w"]
font = SubResource("SystemFont_fo6tg")
font_size = 25

[sub_resource type="SystemFont" id="SystemFont_dpbqo"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_f2tne"]
font = SubResource("SystemFont_dpbqo")
font_size = 25

[sub_resource type="SystemFont" id="SystemFont_2vrsw"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_vv6cs"]
font = SubResource("SystemFont_2vrsw")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wr8gt"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.894118, 0.576471, 0.364706, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_013lb"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_83bli"]
font = SubResource("SystemFont_013lb")
font_size = 20

[sub_resource type="SystemFont" id="SystemFont_qbjd4"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_ratal"]
font = SubResource("SystemFont_qbjd4")
font_size = 10

[sub_resource type="SystemFont" id="SystemFont_re425"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_qw0e7"]
font = SubResource("SystemFont_re425")
font_size = 10
font_color = Color(1, 0.819608, 0.0745098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jkmhj"]
font_size = 10

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xf2iw")

[node name="Manager" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5fogs")
script = ExtResource("2_hwnbc")

[node name="Inventory" type="GridContainer" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 279.0
offset_top = 336.0
offset_right = 695.0
offset_bottom = 668.0
columns = 5
script = ExtResource("3_8bbtk")

[node name="Slot" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot2" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot3" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot4" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot5" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot6" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot7" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot8" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot9" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot10" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot11" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot12" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot13" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot14" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot15" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot16" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot17" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot18" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot19" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot20" parent="Manager/Inventory" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Shop" type="GridContainer" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1248.0
offset_top = 381.0
offset_right = 1496.0
offset_bottom = 629.0
columns = 3
script = ExtResource("5_8cb6t")

[node name="Slot" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot2" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot3" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot4" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot5" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot6" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot7" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot8" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Slot9" parent="Manager/Shop" instance=ExtResource("4_fcjqc")]
layout_mode = 2

[node name="Currency" type="HBoxContainer" parent="Manager"]
layout_mode = 0
offset_left = 278.0
offset_top = 702.0
offset_right = 430.0
offset_bottom = 742.0

[node name="Label" type="Label" parent="Manager/Currency"]
layout_mode = 2
text = "Gold: "
label_settings = SubResource("LabelSettings_w4pir")

[node name="Balance" type="Label" parent="Manager/Currency"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_83rat")

[node name="CloseShop" type="Button" parent="Manager"]
layout_mode = 0
offset_left = 1556.0
offset_top = 936.0
offset_right = 1844.0
offset_bottom = 1030.0
theme_override_font_sizes/font_size = 45
text = "Close"

[node name="Title" type="Label" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 279.0
offset_top = 254.0
offset_right = 692.0
offset_bottom = 324.0
text = "Inventory"
label_settings = SubResource("LabelSettings_nrksc")

[node name="Title2" type="Label" parent="Manager"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1274.0
offset_top = 299.0
offset_right = 1470.0
offset_bottom = 369.0
text = "Shop"
label_settings = SubResource("LabelSettings_nrksc")

[node name="MenuBase" type="Panel" parent="."]
unique_name_in_owner = true
z_index = -1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = -346.0
offset_right = 445.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i4wyt")

[node name="Close" type="Button" parent="MenuBase"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 534.0
offset_top = 501.0
offset_right = 866.0
offset_bottom = 581.0
theme_override_fonts/font = SubResource("SystemFont_sjsjx")
theme_override_font_sizes/font_size = 35
text = "Resume Game"

[node name="InventoryButton" type="Button" parent="MenuBase"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 534.0
offset_top = 410.0
offset_right = 866.0
offset_bottom = 490.0
theme_override_fonts/font = SubResource("SystemFont_sjsjx")
theme_override_font_sizes/font_size = 35
text = "Inventory"

[node name="Return" type="Button" parent="MenuBase"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 534.0
offset_top = 319.0
offset_right = 866.0
offset_bottom = 399.0
theme_override_fonts/font = SubResource("SystemFont_sjsjx")
theme_override_font_sizes/font_size = 35
text = "Return to Base"

[node name="Health" type="Label" parent="MenuBase"]
layout_mode = 0
offset_left = 42.0
offset_top = 27.0
offset_right = 268.0
offset_bottom = 53.0
text = "Health: 50/50"
label_settings = SubResource("LabelSettings_ywaq5")

[node name="HealthBar" type="ProgressBar" parent="MenuBase/Health"]
layout_mode = 0
offset_top = 24.0
offset_right = 222.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxFlat_7k432")
theme_override_styles/fill = SubResource("StyleBoxFlat_gkcc8")
value = 50.0
show_percentage = false

[node name="Mana" type="Label" parent="MenuBase"]
layout_mode = 0
offset_left = 42.0
offset_top = 79.0
offset_right = 268.0
offset_bottom = 105.0
text = "Mana: 50/50"
label_settings = SubResource("LabelSettings_ywaq5")

[node name="ManaBar" type="ProgressBar" parent="MenuBase/Mana"]
layout_mode = 0
offset_top = 24.0
offset_right = 222.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxFlat_3er5p")
theme_override_styles/fill = SubResource("StyleBoxFlat_ltu0o")
value = 50.0
show_percentage = false

[node name="QuitGame" type="Button" parent="MenuBase"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 535.0
offset_top = 590.0
offset_right = 866.0
offset_bottom = 671.0
theme_override_fonts/font = SubResource("SystemFont_aohx5")
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuBase"]
layout_mode = 0
offset_left = 42.0
offset_top = 130.0
offset_right = 314.0
offset_bottom = 216.0

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBase/VBoxContainer2"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="MenuBase/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Player's Level: "
label_settings = SubResource("LabelSettings_6food")

[node name="PlayerLvl" type="Label" parent="MenuBase/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_8g67w")

[node name="CurrentXP" type="Label" parent="MenuBase/VBoxContainer2"]
layout_mode = 2
text = "Current XP: 99"
label_settings = SubResource("LabelSettings_f2tne")

[node name="XPUntilNext" type="Label" parent="MenuBase/VBoxContainer2"]
layout_mode = 2
text = "XP needed for next Lvl: 99"
label_settings = SubResource("LabelSettings_f2tne")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBase"]
layout_mode = 0
offset_left = 42.0
offset_top = 233.0
offset_right = 238.0
offset_bottom = 319.0

[node name="Strength" type="Label" parent="MenuBase/VBoxContainer"]
layout_mode = 2
text = "Strength: 99"
label_settings = SubResource("LabelSettings_vv6cs")

[node name="Vitality" type="Label" parent="MenuBase/VBoxContainer"]
layout_mode = 2
text = "Vitality: 99"
label_settings = SubResource("LabelSettings_vv6cs")

[node name="Magic" type="Label" parent="MenuBase/VBoxContainer"]
layout_mode = 2
text = "Magic: 99"
label_settings = SubResource("LabelSettings_vv6cs")

[node name="ItemPopup" type="PopupPanel" parent="."]
unique_name_in_owner = true
position = Vector2i(860, 440)
size = Vector2i(131, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_wr8gt")

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup"]
offset_left = 10.0
offset_top = 10.0
offset_right = 121.0
offset_bottom = 90.0

[node name="Name" type="Label" parent="ItemPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_outline_size = 5
text = "Name"
label_settings = SubResource("LabelSettings_83bli")

[node name="HBoxContainer" type="HBoxContainer" parent="ItemPopup/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ItemPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_outline_size = 5
text = "Value: "
label_settings = SubResource("LabelSettings_ratal")

[node name="Value" type="Label" parent="ItemPopup/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/shadow_outline_size = 5
text = "100"
label_settings = SubResource("LabelSettings_qw0e7")

[node name="Description" type="Label" parent="ItemPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Description"
label_settings = SubResource("LabelSettings_jkmhj")
autowrap_mode = 2

[connection signal="pressed" from="Manager/CloseShop" to="." method="_on_close_shop_pressed"]
[connection signal="pressed" from="MenuBase/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="MenuBase/InventoryButton" to="Manager" method="_on_inventory_button_pressed"]
[connection signal="pressed" from="MenuBase/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="MenuBase/QuitGame" to="." method="_on_quit_game_pressed"]
